--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h5,
 h6 {
   padding:0;
   margin:0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .clear-fix {
@@ -24,18 +24,26 @@ h6 {
   padding: 0 5%;
 }
 
+.contacts{
+  margin-bottom: 20px;
+}
+
 h1 {
-  font-size: 40px;
-  color: #f5a623;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 48px;
+  color: #000000;
   line-height: 48px;
   display: inline;
 }
 
 h2 {
-  font-weight: bold;
-  font-size: 24px;
-  color: #999;
-  line-height: 29px;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 40px;
+  text-align: center;
+  color: #000000;
+  line-height: 70px;
   padding: 10px;
 }
 
@@ -54,13 +62,14 @@ h4 {
 }
 
 h2,
-h3,
 h4,
 h5 {
   padding:10px 5%;
 
 }
-
+h3 {
+line-height: 48px;
+}
 
 .date-text {
   font-style: italic;
@@ -95,41 +104,68 @@ a {
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #f3f3f3;
+  color: #454545;
   line-height: 28px;
+  margin: 0px 0px 0px -45px;
+}
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #000000;
   display: none;
 }
 
-.orange {
-  background-color: #f5ae23;
+.black {
+  background-color: #000000;
 }
 
-.orange-text {
-  color: #f5ae23;
+.black-text {
+  font-weight: bold;
+  font-size: 14px;
+  color: #000000;
 }
 
 .white-text {
   font-weight: bold;
-  color: #fff;
+  color: #FFFFFF;
+  vertical-align: text-top;
 }
 
-.gray {
-  background-color: #f3f3f3;
+.gray-text {
+  font-weight: bold;
+  color: #868686;
+}
+.white {
+  background-color: #F5F5F5;
   padding-bottom: 10px;
   clear:both;
 }
 
-.dark-gray {
+.light-gray {
+  background-color: #E8E8E8;
+  padding-bottom: 10px;
+  clear:both;
+}
+.gray {
+  margin-top: -8px;
   background-color: #4a4a4a;
+}
+.dark-gray {
+  margin-top: -8px;
+  background-color: #4a4a4a;
+}
+.connect-gray{
+  background-color: #868686;
 }
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-image: url('../images/29478830.jpg');
+  background-repeat: no-repeat;
+    background-size: cover;
+  background-color: #ffffff;
+  padding-bottom: 5px;
+
 }
 
 .flex-box {
@@ -151,8 +187,10 @@ ul {
 
 .biopic {
   float: left;
-  padding: 10px;
-  width: 200px;
+  max-width: 200px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
   display: none;
 }
 
@@ -162,6 +200,11 @@ img {
 
 span {
   padding: 5px;
+}
+
+.project-img{
+  margin-left: auto;
+  margin-right: auto
 }
 
 #lets-connect {
@@ -192,6 +235,11 @@ span {
   .welcome-message {
     display: none;
   }
+}
+
+.content {
+  margin: auto;
+  width: 65%;
 }
 
 #map {
